<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white"
    tools:context="com.cjkj.jcb_caiyou.ui.LoginActivity">

    <ImageView
        android:id="@+id/splash_default_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/default_grow_margin"
        android:layout_marginLeft="@dimen/default_general_margin"
        android:layout_marginRight="@dimen/default_general_margin"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_default_height"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/default_small_padding"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ellipsize="start"
            android:hint="@string/login_hint_account"
            android:maxLines="1"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/default_medium_text_size"
            android:inputType="textVisiblePassword"
            />

        <ImageButton
            android:id="@+id/delete_username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:paddingEnd="@dimen/default_general_margin"
            android:paddingStart="@dimen/default_grow_margin"
            android:src="@drawable/ic_edittext_clear"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_bg" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_default_height"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/default_small_padding"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ellipsize="start"
            android:hint="@string/login_hint_password"
            android:inputType="textVisiblePassword"
            android:maxLines="1"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/default_medium_text_size" />

        <TextView
            android:id="@+id/forgetpwd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:paddingEnd="@dimen/default_general_margin"
            android:paddingStart="@dimen/default_grow_margin"
            android:text="@string/login_text_forgetpassword"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/default_small_text_size"
            />
    </LinearLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_bg" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_marginBottom="@dimen/default_general_margin"
        android:layout_marginLeft="@dimen/default_general_margin"
        android:layout_marginRight="@dimen/default_general_margin"
        android:layout_marginTop="@dimen/default_long_margin"
        android:background="@drawable/corner_btn"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/default_medium_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_default_height"
        android:layout_marginLeft="@dimen/default_general_margin"
        android:layout_marginRight="@dimen/default_general_margin"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:paddingEnd="@dimen/default_general_margin"
            android:paddingStart="@dimen/default_grow_margin"
            android:text="@string/login_text_phonenumber"
            android:textColor="@color/gray"
            android:textSize="@dimen/default_small_text_size"
            android:id="@+id/login_tv_phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:paddingEnd="@dimen/default_general_margin"
            android:paddingStart="@dimen/default_grow_margin"
            android:text="@string/login_sign"
            android:textColor="@color/red"
            android:textSize="@dimen/default_small_text_size"
            android:id="@+id/login_tv_regin" />
    </LinearLayout>
</LinearLayout>
